fix 508 compliance alt text and color contrast issues

--- a/src/app/components/QTLs/qtls-data-inputs/qtls-data-inputs.component.css
+++ b/src/app/components/QTLs/qtls-data-inputs/qtls-data-inputs.component.css
@@ -4,7 +4,7 @@
 }
 
 .qtls-data-files a {
-    color: #00A2EC;
+    color: blue;
     text-decoration: none;
     cursor: pointer;
     font-size: 9pt;
