--- a/src/app/components/QTLs/qtls-locus-quantification/qtls-locus-quantification.component.css
+++ b/src/app/components/QTLs/qtls-locus-quantification/qtls-locus-quantification.component.css
@@ -11,7 +11,7 @@
 #display-number-genes {
     font-size: 9pt;
     font-weight: bold;
-    color: grey;
+    color: black;
 }
 
 mat-button-toggle-group {
@@ -19,7 +19,11 @@ mat-button-toggle-group {
 }
 
 /* Override selected toggle buttons */
+.mat-button-toggle {
+    color: black !important;
+}
+
 .mat-button-toggle-checked {
     background-color: #3F51B5 !important;
     color: white !important;
-  }
+}
